add local support for restbus

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "restbusURL": "http://restbus.info/api/",
+    "restbusURL": "http://127.0.0.1:3535",
     "cassandraURL": "127.0.0.1:9042"
 }
