Add Configs, improve Error handling, and Marin Support
This commit does a lot of refactoring
and adds configs as to easily add more
transit agencies.

This commit also shows the application
of this by adding Marin transit.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/EddyIonescu/orion#readme",
   "dependencies": {
     "axios": "^0.16.2",
-    "cassandra-driver": "^3.3.0"
+    "cassandra-driver": "^3.3.0",
+    "lodash": "^4.17.4"
   }
 }
