--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "restbusURL": "http://127.0.0.1:3535",
-    "cassandraURL": "127.0.0.1:9042"
+    "cassandraURL": "127.0.0.1:9042",
+    "dev": true
 }
