refactor to allow fetching vehicles for any agency using Nextbus via environment variables instead of adding code for each agency; allow configuring output S3 bucket via environment variables; use standard method for configuring S3 credentials; support local development via docker-compose; remove unused code (e.g. Cassandra); remove dependency on restbus by using Nextbus JSON API

--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
   "name": "orion",
-  "version": "1.0.2",
-  "description": "Finds realtime transit data and sends it to Cassandra",
+  "version": "1.1.0",
+  "description": "Finds realtime transit data and sends it to S3",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start-s3": "node realtimeTransitToS3.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EddyIonescu/orion.git"
+    "url": "git+https://github.com/trynmaps/orion.git"
   },
   "author": "Eddy",
   "bugs": {
-    "url": "https://github.com/EddyIonescu/orion/issues"
+    "url": "https://github.com/trynmaps/orion/issues"
   },
-  "homepage": "https://github.com/EddyIonescu/orion#readme",
+  "homepage": "https://github.com/trynmaps/orion#readme",
   "dependencies": {
     "aws-sdk": "^2.238.1",
     "axios": "^0.16.2",
-    "cassandra-driver": "^3.3.0",
     "fs": "0.0.1-security",
     "zlib": "^1.0.5"
   },
