--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "orion",
   "version": "1.1.0",
   "description": "Finds realtime transit data and sends it to S3",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,8 @@
     "aws-sdk": "^2.238.1",
     "axios": "^0.16.2",
     "fs": "0.0.1-security",
+    "gtfs-realtime-bindings": "^0.0.5",
+    "request": "^2.88.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
